# bazel-central-registry

custom_modules/cli11/: BUILD.bazel  MODULE.bazel
custom_modules/freeimage/: BUILD.bazel  MODULE.bazel  gzread_macos.patch
modules/freeimage/: metadata.json
modules/freeimage/3.18.0/: presubmit.yml  source.json
modules/freeimage/3.18.0/patches/: add_build_file.patch  gzlib_macos.patch  gzwrite_macos.patch  jxrglue_macos.patch  module.patch  openexr_compat.patch  segdec_macos.patch
modules/rules_compdb/: metadata.json
modules/rules_compdb/0.5.2/: MODULE.bazel  presubmit.yml  source.json
modules/rules_compdb/0.5.2/patches/: module_dot_bazel.patch
